--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ mpmath==1.3.0
 multidict==6.0.5
 multiprocess==0.70.16
 networkx==3.3
-numpy==2.0.0
+numpy<2
 packaging==24.1
 pandas==2.2.2
 platformdirs==4.2.2
